--- a/guru/modul/home.html
+++ b/guru/modul/home.html
@@ -92,6 +92,12 @@
 							<p>
 								<ul class="list-group">
 									<li class="list-group-item">
+										<a class="btn btn-primary btn-block text-left" href="javascript:halaman('profil_peserta');">
+											<i class="fas fa-chevron-circle-right"></i>
+											<span class="sub-item">Edit Profil Peserta</span>
+										</a>
+									</li>
+									<li class="list-group-item">
 										<a class="btn btn-primary btn-block text-left" href="javascript:halaman('nilai_to_osnk');">
 											<i class="fas fa-chevron-circle-right"></i>
 											<span class="sub-item">Nilai TO OSN-K ASTRONOMI</span>
