--- a/guru/index.html
+++ b/guru/index.html
@@ -424,7 +424,7 @@
 			}).toString());
 		</script>
 		<script type="text/javascript">
-			let dnamapes = Cookies.get('nama-peserta1', {
+			/*var dnamapes = Cookies.get('nama-peserta1', {
 				path    : '/dasbor/', 
 				domain  : 'r26ast.github.io'
 			});
@@ -435,7 +435,7 @@
 					$('.kelas-'+ i +'').text(Cookies.get('kelas-peserta'+ i +'', { path    : '/dasbor/', domain  : 'r26ast.github.io'}));
 				}
 			}
-			else {}
+			else {} */
 		
 			var indexEdit, indexDelete;
 		
