--- a/guru/modul/profil_peserta.html
+++ b/guru/modul/profil_peserta.html
@@ -11,7 +11,13 @@
 				<i class="flaticon-right-arrow"></i>
 			</li>
 			<li class="nav-item">
-				<a href="#">Rekap Nilai</a>
+				<a href="javascript:halaman('nilai')">Rekap Nilai</a>
+			</li>
+			<li class="separator">
+				<i class="flaticon-right-arrow"></i>
+			</li>
+			<li class="nav-item">
+				<a href="#">Edit Profil Peserta</a>
 			</li>
 		</ul>
 	</div>
@@ -19,7 +25,7 @@
 		<div class="col"> <!-- data -->
 			<div class="card">
 				<div class="card-header">
-					<h4 class="card-title">Nilai OSN-K ASTRONOMI <span class="tahun"></span></h4>
+					<h4 class="card-title">Edit Profil Peserta</h4>
 				</div>
 				<div class="card-body">
 					<div class="tabel table-responsive">
