--- a/guru/modul/profil_peserta.html
+++ b/guru/modul/profil_peserta.html
@@ -101,7 +101,7 @@
 			</div>
 		</div>
 	</div>
-	<a class="btn btn-default col-md-3" href="javascript:halaman('home')"><i class="fas fa-arrow-circle-left"></i> Kembali</a>
+	<a class="btn btn-default col-md-3" href="javascript:halaman('nilai')"><i class="fas fa-arrow-circle-left"></i> Kembali</a>
 </div>
 <style>
 	.edit:hover,
