--- a/guru/modul/nilai_osnk.html
+++ b/guru/modul/nilai_osnk.html
@@ -42,7 +42,7 @@
 								<td>
 									<p><b>AST001</b></p>
 								</td>
-								<td></td>
+								<td class="napes-1"></td>
 								<td><span id="nilai_skor_OSK_1"></span> / 40</td>	
 								<td><span id="nilai_OSK_1"></span> / 100</td>	
 							</tr>
@@ -50,7 +50,7 @@
 								<td>
 									<p><b>AST002</b></p>
 								</td>
-								<td></td>
+								<td class="napes-2"></td>
 								<td><span id="nilai_skor_OSK_2"></span> / 40</td>	
 								<td><span id="nilai_OSK_2"></span> / 100</td>	
 							</tr>
@@ -58,7 +58,7 @@
 								<td>
 									<p><b>AST003</b></p>
 								</td>
-								<td></td>
+								<td class="napes-3"></td>
 								<td><span id="nilai_skor_OSK_3"></span> / 40</td>	
 								<td><span id="nilai_OSK_3"></span> / 100</td>	
 							</tr>
@@ -66,7 +66,7 @@
 								<td>
 									<p><b>AST004</b></p>
 								</td>
-								<td></td>
+								<td class="napes-4"></td>
 								<td><span id="nilai_skor_OSK_4"></span> / 40</td>	
 								<td><span id="nilai_OSK_4"></span> / 100</td>	
 							</tr>
@@ -74,7 +74,7 @@
 								<td>
 									<p><b>AST005</b></p>
 								</td>
-								<td></td>
+								<td class="napes-5"></td>
 								<td><span id="nilai_skor_OSK_5"></span> / 40</td>	
 								<td><span id="nilai_OSK_5"></span> / 100</td>	
 							</tr>
