--- a/guru/modul/profil_peserta.html
+++ b/guru/modul/profil_peserta.html
@@ -29,73 +29,79 @@
 				</div>
 				<div class="card-body">
 					<div class="tabel table-responsive">
-					<table class="table">
-				  		<thead>
-							<tr class="bg-primary" style="color: #fff">
-								<th scope="col"><b></b>Username Peserta</b></th>
-								<th scope="col"><b>Nama Peserta</b></th>
-								<th scope="col"><b>Kelas Peserta</b></th>
-								<th scope="col"><b>Aksi</b></th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td>
-									<p><b>AST001</b></p>
-								</td>
-								<td class="napes-1"></td>
-								<td class="kelas-1"></td>
-								<td>
-									<a href="#editEmployeeModal" class="btn btn-warning edit" data-toggle="modal"><i class="fa fa-pencil-square-o" title="Edit"></i> <b>Edit</b></a>
-									<a href="#deleteEmployeeModal" class="btn btn-danger delete" data-toggle="modal"><i class="fa fa-trash-o" title="Delete"></i> <b>Hapus</b></a>
-								</td>
-							</tr>
-							 <tr>
-								<td>
-									<p><b>AST002</b></p>
-								</td>
-								<td class="napes-2"></td>
-								<td class="kelas-2"></td>
-								<td>
-									<a href="#editEmployeeModal" class="btn btn-warning edit" data-toggle="modal"><i class="fa fa-pencil-square-o" title="Edit"></i> <b>Edit</b></a>
-									<a href="#deleteEmployeeModal" class="btn btn-danger delete" data-toggle="modal"><i class="fa fa-trash-o" title="Delete"></i> <b>Hapus</b></a>
-								</td>
-							</tr>
-							 <tr>
-								<td>
-									<p><b>AST003</b></p>
-								</td>
-								<td class="napes-3"></td>
-								<td class="kelas-3"></td>
-								<td>
-									<a href="#editEmployeeModal" class="btn btn-warning edit" data-toggle="modal"><i class="fa fa-pencil-square-o" title="Edit"></i> <b>Edit</b></a>
-									<a href="#deleteEmployeeModal" class="btn btn-danger delete" data-toggle="modal"><i class="fa fa-trash-o" title="Delete"></i> <b>Hapus</b></a>
-								</td>	
-							</tr>
-							 <tr>
-								<td>
-									<p><b>AST004</b></p>
-								</td>
-								<td class="napes-4"></td>
-								<td class="kelas-4"></td>
-								<td>
-									<a href="#editEmployeeModal" class="btn btn-warning edit" data-toggle="modal"><i class="fa fa-pencil-square-o" title="Edit"></i> <b>Edit</b></a>
-									<a href="#deleteEmployeeModal" class="btn btn-danger delete" data-toggle="modal"><i class="fa fa-trash-o" title="Delete"></i> <b>Hapus</b></a>
-								</td>	
-							</tr>
-							 <tr>
-								<td>
-									<p><b>AST005</b></p>
-								</td>
-								<td class="napes-5"></td>
-								<td class="kelas-5"></td>
-								<td>
-									<a href="#editEmployeeModal" class="btn btn-warning edit" data-toggle="modal"><i class="fa fa-pencil-square-o" title="Edit"></i> <b>Edit</b></a>
-									<a href="#deleteEmployeeModal" class="btn btn-danger delete" data-toggle="modal"><i class="fa fa-trash-o" title="Delete"></i> <b>Hapus</b></a>
-								</td>
-							</tr>
-						</tbody>
-					</table>
+						<table class="table">
+					  		<thead>
+								<tr class="bg-primary" style="color: #fff">
+									<th scope="col"><b></b>Username Peserta</b></th>
+									<th scope="col"><b>Nama Peserta</b></th>
+									<th scope="col"><b>Kelas Peserta</b></th>
+									<th scope="col"><b>Aksi</b></th>
+								</tr>
+							</thead>
+							<tbody>
+								<tr>
+									<td>
+										<p><b>AST001</b></p>
+									</td>
+									<td class="napes-1"></td>
+									<td class="kelas-1"></td>
+									<td>
+										<a href="#editEmployeeModal" class="btn btn-warning edit" data-toggle="modal"><i class="fa fa-pencil-square-o" title="Edit"></i> <b>Edit</b></a>
+										<a href="#deleteEmployeeModal" class="btn btn-danger delete" data-toggle="modal"><i class="fa fa-trash-o" title="Delete"></i> <b>Hapus</b></a>
+									</td>
+								</tr>
+								 <tr>
+									<td>
+										<p><b>AST002</b></p>
+									</td>
+									<td class="napes-2"></td>
+									<td class="kelas-2"></td>
+									<td>
+										<a href="#editEmployeeModal" class="btn btn-warning edit" data-toggle="modal"><i class="fa fa-pencil-square-o" title="Edit"></i> <b>Edit</b></a>
+										<a href="#deleteEmployeeModal" class="btn btn-danger delete" data-toggle="modal"><i class="fa fa-trash-o" title="Delete"></i> <b>Hapus</b></a>
+									</td>
+								</tr>
+								 <tr>
+									<td>
+										<p><b>AST003</b></p>
+									</td>
+									<td class="napes-3"></td>
+									<td class="kelas-3"></td>
+									<td>
+										<a href="#editEmployeeModal" class="btn btn-warning edit" data-toggle="modal"><i class="fa fa-pencil-square-o" title="Edit"></i> <b>Edit</b></a>
+										<a href="#deleteEmployeeModal" class="btn btn-danger delete" data-toggle="modal"><i class="fa fa-trash-o" title="Delete"></i> <b>Hapus</b></a>
+									</td>	
+								</tr>
+								 <tr>
+									<td>
+										<p><b>AST004</b></p>
+									</td>
+									<td class="napes-4"></td>
+									<td class="kelas-4"></td>
+									<td>
+										<a href="#editEmployeeModal" class="btn btn-warning edit" data-toggle="modal"><i class="fa fa-pencil-square-o" title="Edit"></i> <b>Edit</b></a>
+										<a href="#deleteEmployeeModal" class="btn btn-danger delete" data-toggle="modal"><i class="fa fa-trash-o" title="Delete"></i> <b>Hapus</b></a>
+									</td>	
+								</tr>
+								 <tr>
+									<td>
+										<p><b>AST005</b></p>
+									</td>
+									<td class="napes-5"></td>
+									<td class="kelas-5"></td>
+									<td>
+										<a href="#editEmployeeModal" class="btn btn-warning edit" data-toggle="modal"><i class="fa fa-pencil-square-o" title="Edit"></i> <b>Edit</b></a>
+										<a href="#deleteEmployeeModal" class="btn btn-danger delete" data-toggle="modal"><i class="fa fa-trash-o" title="Delete"></i> <b>Hapus</b></a>
+									</td>
+								</tr>
+							</tbody>
+						</table>
+						<div class="d-flex justify-content-end">
+							<a href="#deleteEmployeeModal" class="btn btn-danger col-md-3 delete-all" data-toggle="modal">
+								<i class="fa fa-trash-o" title="Delete All" aria-hidden="true"></i>
+								<b>Hapus Semua</b>
+							</a>
+						</div>
 					</div>
 				</div>
 			</div>
