--- a/guru/index.html
+++ b/guru/index.html
@@ -501,7 +501,7 @@
 						domain  : 'r26ast.github.io'
 					});
 				}
-				$('#deleteEmployeeModal').modal('hide');
+				$('#deleteAllModal').modal('hide');
 			});
 		</script>
 	</div>
