--- a/guru/modul/profil_peserta.html
+++ b/guru/modul/profil_peserta.html
@@ -97,7 +97,7 @@
 							</tbody>
 						</table>
 						<div class="d-flex justify-content-end">
-							<a href="#deleteEmployeeModal" class="btn btn-danger col-md-3 delete" data-toggle="modal">
+							<a href="#deleteAllModal" class="btn btn-danger col-md-3 delete" data-toggle="modal">
 								<i class="fa fa-trash-o" title="Delete All" aria-hidden="true"></i>
 								<b>Hapus Semua</b>
 							</a>
