--- a/guru/modul/profil.html
+++ b/guru/modul/profil.html
@@ -30,6 +30,7 @@
 						<li class="contentnode"><dl><dt>Nomor Pokok Sekolah Nasional/Kode Perguruan Tinggi</dt><dd>20322740</dd></dl></li>
 						<li class="contentnode"><dl><dt>Sekolah/Universitas</dt><dd>SMA NEGERI 2 BATANG</dd></dl></li>
 						<li class="contentnode"><dl><dt>Username</dt><dd class="username"></dd></dl></li>
+						<li class="contentnode" style="display: none;"><dl><dt>Nama</dt><dd class="nama"></dd></dl></li>
 						<li class="contentnode"><dl><dt>Kurikulum</dt><dd>Kurikulum Merdeka</dd></dl></li>
 						<li class="contentnode"><dl><dt>Kabupaten/Kota</dt><dd>Kab. Batang</dd></dl></li>
 						<li class="contentnode"><dl><dt>Provinsi</dt><dd>Jawa Tengah</dd></dl></li>
@@ -48,16 +49,16 @@
 				<div class="card-body">
 					<ul class="nav nav-pills nav-secondary nav-pills-no-bd" id="pills-tab-without-border" role="tablist">
 						<li class="nav-item">
-							<a class="nav-link" id="pills-home-tab-nobd" data-toggle="pill" href="#pills-home-nobd" role="tab" aria-controls="pills-home-nobd" aria-selected="true">Ganti Password</a>
+							<a class="nav-link" id="pills-home-tab-nobd" data-toggle="pill" href="#pills-home-nobd" role="tab" aria-controls="pills-home-nobd" aria-selected="true">Isi Nama</a>
 						</li>
 						<li class="nav-item">
 							<a class="nav-link" id="pills-profile-tab-nobd" data-toggle="pill" href="#pills-profile-nobd" role="tab" aria-controls="pills-profile-nobd" aria-selected="false">Ganti Foto</a>
 						</li>
 					</ul>
 					<div class="tab-content mt-2 mb-3" id="pills-without-border-tabContent">
-						<div class="tab-pane fade show" id="pills-home-nobd" role="tabpanel" aria-labelledby="pills-home-tab-nobd">
+						<!-- <div class="tab-pane fade show" id="pills-home-nobd" role="tabpanel" aria-labelledby="pills-home-tab-nobd">
 							<hr>
-							<form action="" method="post">
+							<form>
 								<div class="form-group">
 										<input name="pass" type="text" class="form-control" placeholder="Password Lama">
 								</div>
@@ -68,9 +69,20 @@
 									<button name="changePassword" type="submit" class="btn btn-success btn-block">Ganti Password</button>
 								</div>
 							</form>
+						</div> -->
+						<div class="tab-pane fade show" id="pills-home-nobd" role="tabpanel" aria-labelledby="pills-home-tab-nobd">
+							<hr>
+							<form>
+								<div class="form-group">
+									<input type="text" class="form-control" placeholder="Isikan Nama Anda">
+								</div>
+							</form>
+							<div class="form-group">									
+								<button type="button" class="btn btn-primary btn-block save-nama">Simpan</button>
+							</div>
 						</div>
 						<div class="tab-pane fade" id="pills-profile-nobd" role="tabpanel" aria-labelledby="pills-profile-tab-nobd">
-							<form action="" method="post" enctype="multipart/form-data">
+							<form enctype="multipart/form-data">
 								<div class="form-group">
 									<label>Foto Profile</label>
 									<p>
