--- a/guru/index.html
+++ b/guru/index.html
@@ -452,7 +452,7 @@
 					domain  : 'r26ast.github.io'
 				});
 					
-				if (typeof dnamapes != "undefined") {
+				if (typeof nama != "undefined") {
 					$('.list-nama').show();
 					$('.nama').text(nama);
 				}
