--- a/guru/modul/profil.html
+++ b/guru/modul/profil.html
@@ -78,7 +78,8 @@
 								</div>
 							</form>
 							<div class="form-group">									
-								<button type="button" class="btn btn-primary btn-block save-nama">Simpan</button>
+								<button type="button" class="btn btn-primary save-nama">Simpan</button>
+								<button type="button" class="btn btn-danger hapus-nama">Hapus</button>
 							</div>
 						</div>
 						<div class="tab-pane fade" id="pills-profile-nobd" role="tabpanel" aria-labelledby="pills-profile-tab-nobd">
