--- a/guru/index.html
+++ b/guru/index.html
@@ -431,6 +431,7 @@
 					domain  : 'r26ast.github.io', 
 					secure  : true
 				});
+				$('.form-nama').val('');
 			});
 
 			$('.hapus-nama').click(function() {
@@ -440,6 +441,7 @@
 					domain  : 'r26ast.github.io'
 				});
 				$('.list-nama').hide();
+				$('.form-nama').val('');
 				//$('#deleteNamaModal').modal('hide');
 			});
 		</script>
