--- a/guru/modul/profil.html
+++ b/guru/modul/profil.html
@@ -74,7 +74,7 @@
 							<hr>
 							<form>
 								<div class="form-group">
-									<input type="text" class="form-control form-nama" placeholder="Isikan Nama Anda">
+									<input type="text" class="form-control form-nama" placeholder="Isikan Nama Anda" required>
 								</div>
 							</form>
 							<div class="form-group">									
