--- a/peserta/modul/osnk.html
+++ b/peserta/modul/osnk.html
@@ -38,15 +38,15 @@
 							<h4 class="font-weight-bold">Penjelasan ringkas fitur aplikasi OSN-K Astronomi</h4>
 							<ul>
 								<li class="list-item">Hanya dapat diikuti oleh siswa SMA NEGERI 2 BATANG yang telah terdaftar sebagai peserta OSN-K Bidang Astronomi tahun <span class="tahun"></span>.</li>
-								<li class="list-item">Masuk ke aplikasi TO OSN-K menggunakan User-ID dan Password yang telah ditentukan.</li>
+								<li class="list-item">Masuk ke aplikasi OSN-K menggunakan User-ID dan Password yang telah ditentukan.</li>
 								<li class="list-item">Pastikan tersedia jaringan listrik dan Internet yang stabil dan memadai selama tes.</li>
 								<li class="list-item">Disediakan penanda hitung mundur waktu di setiap laman sesi tes. Segera kerjakan tes setelah tanda waktu muncul atau dimulai. Waktu yang disediakan sudah termasuk waktu untuk menekan tombol pengiriman jawaban.</li>
 							</ul>
 							<br>
 							<h4 class="font-weight-bold">Jadwal-jadwal penting untuk OSN-K Astronomi</h4>
 							<br>
-							<div style="text-align: center;">
-								<table>
+							<div style="text-align: center;" class="table-responsive">
+								<table class="table">
 									<tbody>
 										<tr>
 											<td style="text-align: left;">1.</td>
