--- a/peserta/modul/profil.html
+++ b/peserta/modul/profil.html
@@ -76,26 +76,27 @@
 								<div class="form-group">
 									<input type="text" class="form-control form-nama" placeholder="Isikan Nama Anda" required>
 								</div>
+								<div class="form-group">									
+									<button type="button" class="btn btn-primary save-nama">Simpan</button>
+									<button type="button" class="btn btn-danger hapus-nama">Hapus</button>
+								</div>
 							</form>
-							<div class="form-group">									
-								<button type="button" class="btn btn-primary save-nama">Simpan</button>
-								<button type="button" class="btn btn-danger hapus-nama">Hapus</button>
-							</div>
 						</div>
 						<div class="tab-pane fade" id="pills-profile-nobd" role="tabpanel" aria-labelledby="pills-profile-tab-nobd">
-							<form action="" method="post" enctype="multipart/form-data">
+							<form enctype="multipart/form-data">
 								<div class="form-group">
-									<label>Foto Profile</label>
+									<label>Foto Profil</label>
 									<p>
 										<center>
-											<img src="../assets/img/user.jpg" class="img-thumbnail" style="height: 90px;width: 90px;">
+											<img src="" class="img-thumbnail" style="height: 90px;width: 90px;">
 										</center>      		
 									</p>
-									<input type="file" name="foto"> 
+									<input type="file" accept=".png, .jpg, .jpeg" /> 
 									<input type="hidden" name="id" value="">       		
 								</div> 
 								<div class="form-group">      
-									<button name="updateProfile" type="submit" class="btn btn-primary btn-block">Simpan</button>
+									<button type="button" class="btn btn-primary simpan-foto">Simpan</button>
+									<button type="button" class="btn btn-danger hapus-foto">Hapus</button>
 								</div>
 							</form>
 						</div>
