--- a/peserta/index.html
+++ b/peserta/index.html
@@ -386,6 +386,44 @@
 				//$('#deleteNamaModal').modal('hide');
 			});
 
+			const limit = 200; //Kb
+			var url;
+
+			$('.foto').change(function() {			
+				const file = $('.foto').files[0]; 
+				var imgKbytes = Math.round(parseInt(file.size)/1024); 
+				console.log(imgKbytes);
+
+				if(imgKbytes >= limit) {
+					//document.getElementById('output').append('Ukuran gambar terlalu besar');
+					alert('Ukuran gambar terlalu besar! Maksimum 200Kb.');
+					return false;
+				}
+				else {	
+					const fr = new FileReader();
+					fr.readAsDataURL(file);
+					fr.addEventListener('load', () => {
+						url = fr.result
+						const img = new Image();
+						img.src = url;
+							
+						//document.getElementById('output').append(url);
+						//localStorage.setItem('foto-profil', url);
+						$('.img-thumbnail').attr('src', url);
+					})
+				}
+			});
+
+			$('.simpan-foto').click(function() {
+				localStorage.setItem('foto-profil', url);
+			});
+
+			$('.hapus-foto').click(function() {
+				localStorage.removeItem('foto-profil');
+				$('.img-thumbnail').attr('src', '../assets/img/user.jpg');
+				$('.avatar-img').attr('src', '../assets/img/user.jpg');
+			});
+
 			$(document).ready(function() {
 				var nama = Cookies.get('nama', {
 					path    : '/dasbor/', 
@@ -404,6 +442,17 @@
 						domain  : 'r26ast.github.io'
 					}).toUpperCase());
 				} 
+
+				const dataurl = localStorage.getItem('foto-profil');
+
+				if (dataurl != null) {
+					$('.img-thumbnail').attr('src', dataurl);
+					$('.avatar-img').attr('src', dataurl);
+				}
+				else {
+					$('.img-thumbnail').attr('src', '../assets/img/user.jpg');
+					$('.avatar-img').attr('src', '../assets/img/user.jpg');
+				}
 			});
 		</script>
 	</div>
