--- a/peserta/modul/profil.html
+++ b/peserta/modul/profil.html
@@ -91,7 +91,7 @@
 											<img src="" class="img-thumbnail" style="height: 90px;width: 90px;">
 										</center>      		
 									</p>
-									<input type="file" accept=".png, .jpg, .jpeg" /> 
+									<input type="file" class="foto" accept=".png, .jpg, .jpeg" /> 
 									<input type="hidden" name="id" value="">       		
 								</div> 
 								<div class="form-group">      
