--- a/peserta/index.html
+++ b/peserta/index.html
@@ -386,15 +386,16 @@
 				//$('#deleteNamaModal').modal('hide');
 			});
 
-			const limit = 200; //Kb
+			const batasFoto = 200; //Kb
 			var url;
 
 			$('.foto').change(function() {			
-				const file = $('.foto').files[0]; 
+				//const file = $('.foto').files[0]; 
+				const file = $('.foto').prop('files')[0];
 				var imgKbytes = Math.round(parseInt(file.size)/1024); 
 				console.log(imgKbytes);
 
-				if(imgKbytes >= limit) {
+				if(imgKbytes >= batasFoto) {
 					//document.getElementById('output').append('Ukuran gambar terlalu besar');
 					alert('Ukuran gambar terlalu besar! Maksimum 200Kb.');
 					return false;
