--- a/peserta/index.html
+++ b/peserta/index.html
@@ -395,7 +395,7 @@
 				var imgKbytes = Math.round(parseInt(file.size)/1024); 
 				console.log(imgKbytes);
 
-				if(imgKbytes >= batasFoto) {
+				if(imgKbytes >= 200) {
 					//document.getElementById('output').append('Ukuran gambar terlalu besar');
 					alert('Ukuran gambar terlalu besar! Maksimum 200Kb.');
 					return false;
