--- a/peserta/modul/profil.html
+++ b/peserta/modul/profil.html
@@ -92,7 +92,10 @@
 										</center>      		
 									</p>
 									<input type="file" class="foto" accept=".png, .jpg, .jpeg" /> 
-									<input type="hidden" name="id" value="">       		
+									<br>
+									<p style="font-size: 10px">
+										Maksimum ukuran foto adalah 200Kb dan dengan format .png, .jpg, atau .jpeg.
+									</p>
 								</div> 
 								<div class="form-group">      
 									<button type="button" class="btn btn-primary simpan-foto">Simpan</button>
