--- a/peserta/modul/profil.html
+++ b/peserta/modul/profil.html
@@ -93,7 +93,8 @@
 									</p>
 									<input type="file" class="foto" accept=".png, .jpg, .jpeg" /> 
 									<br>
-									<p style="font-size: 10px">
+									<br>
+									<p style="font-size: 10px; margin-bottom: 0;">
 										Maksimum ukuran foto adalah 200Kb dan dengan format .png, .jpg, atau .jpeg.
 									</p>
 								</div> 
