--- a/guru/modul/profil.html
+++ b/guru/modul/profil.html
@@ -85,17 +85,22 @@
 						<div class="tab-pane fade" id="pills-profile-nobd" role="tabpanel" aria-labelledby="pills-profile-tab-nobd">
 							<form enctype="multipart/form-data">
 								<div class="form-group">
-									<label>Foto Profile</label>
+									<label>Foto Profil</label>
 									<p>
 										<center>
-											<img src="../assets/img/user.jpg" class="img-thumbnail" style="height: 90px;width: 90px;">
+											<img src="" class="img-thumbnail" style="height: 90px;width: 90px;">
 										</center>      		
 									</p>
-									<input type="file" name="foto"> 
-									<input type="hidden" name="id" value="">       		
+									<input type="file" class="foto" accept=".png, .jpg, .jpeg" /> 
+									<br>
+									<br>
+									<p style="font-size: 10px; margin-bottom: 0;">
+										Maksimum ukuran foto adalah 200Kb dan dengan format .png, .jpg, atau .jpeg.
+									</p>
 								</div> 
 								<div class="form-group">      
-									<button name="updateProfile" type="submit" class="btn btn-primary btn-block">Simpan</button>
+									<button type="button" class="btn btn-primary simpan-foto">Simpan</button>
+									<button type="button" class="btn btn-danger hapus-foto">Hapus</button>
 								</div>
 							</form>
 						</div>
