--- a/guru/index.html
+++ b/guru/index.html
@@ -689,7 +689,7 @@
 				domain  : 'r26ast.github.io'
 			}) === '0') 
 		{
-			window.location.replace('https://r26ast.github.io/dasbor/login');
+			window.location.replace('https://r26ast.github.io/dasbor/peserta/');
 		}
 		else {}
 
