--- a/cbt/cbt.html
+++ b/cbt/cbt.html
@@ -2656,7 +2656,7 @@ var remaining;
 	}
 	
 	function selesaikanTes() {
-		window.location.replace('selesai.html');
+		window.location.replace('selesai');
 		
 		window.addEventListener('load', () => {
 			const handleNetworkChange = () => {
