--- a/peserta/modul/osnk.html
+++ b/peserta/modul/osnk.html
@@ -100,7 +100,7 @@
 					<div class="section_availability course-description-item">
 					</div>
 					<ul class="section m-0 p-0 img-text  d-block list-group" data-for="cmlist">
-						<li class="list-group-item" data-for="cmitem" data-draggroups="resource" data-indexed="true">
+						<li class="list-group-item" data-for="cmitem" data-draggroups="resource" data-indexed="true" hidden>
 							<div class="activity-item" data-activityname="Announcements">
 								<div class="activity-instance ">
 									<div class="activitytitle media  modtype_forum position-relative align-self-start">
@@ -192,7 +192,7 @@
                                                 </div>
                                                 <div class="media-body align-self-center">
                                                     <div class="activityname">
-														<a href="https://r26ast.github.io/CBT/">
+														<a href="https://r26ast.github.io/dasbor/cbt/osnk/">
 															<span class="instancename">OSN-K ASTRONOMI</span>  
 														</a>
                                                     </div>
