--- a/cbt/osnk/konfirmasi_tes.html
+++ b/cbt/osnk/konfirmasi_tes.html
@@ -270,7 +270,7 @@
 	
 	function mulaiTes(){
 			$('#loader').fadeIn();
-			setTimeout(function() {window.location.replace('CBT');}, 1000);
+			setTimeout(function() {window.location.replace('cbt');}, 1000);
 	}
 </script>
 
