--- a/peserta/modul/to_osnk.html
+++ b/peserta/modul/to_osnk.html
@@ -52,21 +52,21 @@
 											<td style="text-align: left;">1.</td>
 											<td style="text-align: left;"><strong>Pendaftaran OSN-K</strong></td>
 											<td style="text-align: center;">&nbsp;</td>
-											<td style="text-align: left;"><strong> – <span class="tahun">2024</span></strong></td>
+											<td style="text-align: left;"><strong> – <span class="tahun"></span></strong></td>
 											<td style="text-align: left;"></td>
 										</tr>
 										<tr>
 											<td style="text-align: left;">2.</td>
 											<td style="text-align: left;"><strong>Ujicoba OSN-K Astronomi</strong></td>
 											<td style="text-align: center;">&nbsp;</td>
-											<td style="text-align: left;"><strong> – <span class="tahun">2024</span></strong></td>
+											<td style="text-align: left;"><strong> – <span class="tahun"></span></strong></td>
 											<td style="text-align: left;">&nbsp;mulai pukul 08:00 WIB/09:00 WITA/10:00 WIT</td>
 										</tr>
 										<tr>
 											<td style="text-align: left;">3.</td>
 											<td style="text-align: left;"><strong>OSN-K Astronomi</strong></td>
 											<td style="text-align: center;">&nbsp;</td>
-											<td style="text-align: left;"><strong> – <span class="tahun">2024</span></strong></td>
+											<td style="text-align: left;"><strong> – <span class="tahun"></span></strong></td>
 											<td style="text-align: left;">&nbsp;<strong>pukul 08:00-10:00 WIB/09:00-11:00 WITA/10:00-12:00 WIT</strong></td>
 										</tr>
 									</tbody>
