--- a/peserta/modul/osnk.html
+++ b/peserta/modul/osnk.html
@@ -124,6 +124,31 @@
 									</div>
 								</div>
 						</li>
+						<li class="list-group-item" data-for="cmitem" data-draggroups="resource" data-indexed="true">
+							<div class="activity-item" data-activityname="Petunjuk">
+								<div class="activity-instance ">
+									<div class="activitytitle media modtype_forum position-relative align-self-start">
+										<div class="activityiconcontainer information courseicon align-self-start mr-3">
+											<i class="fa fa-commenting-o fa-2x" style="color: white"></i>
+										</div>
+										<div class="media-body align-self-center">
+											<div class="activityname">
+												<a href="javascript:halaman('petunjuk')" class=" aalink stretched-link"> 
+													<span class="instancename">Petunjuk Pengerjaan</span>   
+												</a> 
+											</div>
+										</div>
+									</div>
+									</div>
+									<div class="activity-info mt-1 mt-md-0">
+                                        					<div data-region="activity-information" data-activityname="Petunjuk" class="activity-information">
+                                       						</div>
+									</div> 
+									<div class="description">
+										Silakan baca petunjuk berikut agar memudahkan Anda dalam mengerjakan soal.
+									</div>
+								</div>
+						</li>
 						<!-- <li class="list-group-item" data-for="cmitem" data-draggroups="resource" data-indexed="true">
 							<div class="activity-item " data-activityname="Pakta Integritas">
 								<div class="activity-instance ">
