--- a/peserta/modul/osnk.html
+++ b/peserta/modul/osnk.html
@@ -128,8 +128,8 @@
 							<div class="activity-item" data-activityname="Petunjuk">
 								<div class="activity-instance ">
 									<div class="activitytitle media modtype_forum position-relative align-self-start">
-										<div class="activityiconcontainer information courseicon align-self-start mr-3">
-											<i class="fa fa-commenting-o fa-2x" style="color: white"></i>
+										<div class="activityiconcontainer collaboration courseicon align-self-start mr-3">
+											<i class="fa fa-info-circle fa-2x" style="color: white"></i>
 										</div>
 										<div class="media-body align-self-center">
 											<div class="activityname">
