--- a/peserta/modul/osnk.html
+++ b/peserta/modul/osnk.html
@@ -185,7 +185,7 @@
                                                 </div>
                                                 <div class="media-body align-self-center">
                                                     <div class="activityname">
-														<a href="https://r26ast.github.io/osn/assets/pdf/tabelOSNAstronomi.pdf" class="stretched-link">
+														<a href="https://r26ast.github.io/osn/assets/pdf/tabelOSNAstronomi.pdf" target="blank" class="stretched-link">
 															<span class="instancename">Download DATA dan KONSTANTA </span>    
 														</a>
 													</div>
