--- a/cbt/osnk/cbt.html
+++ b/cbt/osnk/cbt.html
@@ -102,38 +102,59 @@
 						<p><strong><img src="https://latex.codecogs.com/svg.image?G=6,673\times&space;10^{-11}" title="G=6,673\times 10^{-11}" /></strong> m<sup>3</sup> kg<sup>&ndash;1</sup> s<sup>&ndash;2</sup> <br/>Jejari bulan = <strong>1738</strong> km </p><br />
 <p>Berapakah jarak dan periode orbit wahana tersebut terhadap Bumi!</p>
 <table class="table " style="margin-top:0px">
-																								<tr><td style="width:20px;border:0px;padding:0px" >
+											<tr>
+												<td style="width:20px;border:0px;padding:0px" >
 													<div class="radio icheck-primary" onClick="KlikJawaban('1.','0');">
-													<input id="pilihan_1_0"  onChange="pilihan('1','a','1')" pil="a" name="pilihan1" type="radio" class="auto-save"  />
-													<label for="pilihan_1_0"></label>
+														<input id="pilihan_1_0"  onChange="pilihan('1','a','1')" pil="a" name="pilihan1" type="radio" class="auto-save"  />
+														<label for="pilihan_1_0"></label>
 													</div>
-											<td style='padding-top:15px;;border:0px;padding:0px;padding-top:5px' onClick="KlikJawaban(1,0);"><?xml encoding="utf-8" ?><p><strong>38440</strong> km dan <strong>20,83</strong> jam</p>
-</td></td></td></tr>														<tr><td style="width:20px;border:0px;padding:0px" >
+												<td style='padding-top:15px;;border:0px;padding:0px;padding-top:5px' onClick="KlikJawaban(1,0);"><?xml encoding="utf-8" ?><p><strong>38440</strong> km dan <strong>20,83</strong> jam</p>
+												</td>
+												</td>
+											</tr>
+											<tr>
+												<td style="width:20px;border:0px;padding:0px" >
 													<div class="radio icheck-primary" onClick="KlikJawaban('1.','1');">
-													<input id="pilihan_1_1"  onChange="pilihan('1','b','1')" pil="b" name="pilihan1" type="radio" class="auto-save"  />
-													<label for="pilihan_1_1"></label>
+														<input id="pilihan_1_1"  onChange="pilihan('1','b','1')" pil="b" name="pilihan1" type="radio" class="auto-save"  />
+														<label for="pilihan_1_1"></label>
 													</div>
-											<td style='padding-top:15px;;border:0px;padding:0px;padding-top:5px' onClick="KlikJawaban(1,1);"><?xml encoding="utf-8" ?><p><strong>38440</strong> km dan <strong>23,59</strong> jam</p>
-</td></td></td></tr>														<tr><td style="width:20px;border:0px;padding:0px" >
+												<td style='padding-top:15px;;border:0px;padding:0px;padding-top:5px' onClick="KlikJawaban(1,1);"><?xml encoding="utf-8" ?><p><strong>38440</strong> km dan <strong>23,59</strong> jam</p>
+												</td>
+												</td>
+											</tr>														
+											<tr>
+												<td style="width:20px;border:0px;padding:0px" >
 													<div class="radio icheck-primary" onClick="KlikJawaban('1.','2');">
-													<input id="pilihan_1_2"  onChange="pilihan('1','c','1')" pil="c" name="pilihan1" type="radio" class="auto-save"  />
-													<label for="pilihan_1_2"></label>
+														<input id="pilihan_1_2"  onChange="pilihan('1','c','1')" pil="c" name="pilihan1" type="radio" class="auto-save"  />
+														<label for="pilihan_1_2"></label>
 													</div>
-											<td style='padding-top:15px;;border:0px;padding:0px;padding-top:5px' onClick="KlikJawaban(1,2);"><?xml encoding="utf-8" ?><p><strong>44240</strong> km dan <strong>25,75</strong> jam</p>
-</td></td></td></tr>														<tr><td style="width:20px;border:0px;padding:0px" >
+												<td style='padding-top:15px;;border:0px;padding:0px;padding-top:5px' onClick="KlikJawaban(1,2);"><?xml encoding="utf-8" ?><p><strong>44240</strong> km dan <strong>25,75</strong> jam</p>
+												</td>
+												</td>
+
+											</tr>														
+											<tr>
+												<td style="width:20px;border:0px;padding:0px" >
 													<div class="radio icheck-primary" onClick="KlikJawaban('1.','3');">
-													<input id="pilihan_1_3"  onChange="pilihan('1','d','1')" pil="d" name="pilihan1" type="radio" class="auto-save"  />
-													<label for="pilihan_1_3"></label>
+														<input id="pilihan_1_3"  onChange="pilihan('1','d','1')" pil="d" name="pilihan1" type="radio" class="auto-save"  />
+														<label for="pilihan_1_3"></label>
 													</div>
-											<td style='padding-top:15px;;border:0px;padding:0px;padding-top:5px' onClick="KlikJawaban(1,3);"><?xml encoding="utf-8" ?><p><strong>44240</strong> km dan <strong>23,45</strong> jam</p>
-</td></td></td></tr>															<tr><td style="width:20px;border:0px;padding:0px" >
+												<td style='padding-top:15px;;border:0px;padding:0px;padding-top:5px' onClick="KlikJawaban(1,3);"><?xml encoding="utf-8" ?><p><strong>44240</strong> km dan <strong>23,45</strong> jam</p>
+												</td>
+												</td>
+											</tr>															
+											<tr>
+												<td style="width:20px;border:0px;padding:0px" >
 													<div class="radio icheck-primary" onClick="KlikJawaban('1.','4');">
-													<input id="pilihan_1_4"  onChange="pilihan('1','e','1')" pil="e" name="pilihan1" type="radio" class="auto-save"  />
-													<label for="pilihan_1_4"></label>
+														<input id="pilihan_1_4"  onChange="pilihan('1','e','1')" pil="e" name="pilihan1" type="radio" class="auto-save"  />
+														<label for="pilihan_1_4"></label>
 													</div>
-											<td style='padding-top:15px;;border:0px;padding:0px;padding-top:5px' onClick="KlikJawaban(1,4);"><?xml encoding="utf-8" ?><p><strong>57680</strong> km dan <strong>38,30</strong> jam</p>
-</td></td></td></tr>													</table>
-															</div>
+												<td style='padding-top:15px;;border:0px;padding:0px;padding-top:5px' onClick="KlikJawaban(1,4);"><?xml encoding="utf-8" ?><p><strong>57680</strong> km dan <strong>38,30</strong> jam</p>
+												</td>
+												</td>
+											</tr>		
+										</table>
+									</div>
 				</div><div class="soal-soal row" style="display:none" id="soal-no-2">
 					<div class="col-lg-12 isi-soal"  style="padding-right:20px;"><?xml encoding="utf-8" ?>
 						<p style="text-align: center;"><strong>PUNCAK SPEKTRUM</strong></p><br />
@@ -141,13 +162,15 @@
 <p>Berdasarkan data tersebut, maka pernyataan berikut ini yang benar adalah .....</p>
 <!--<p>Berilah tanda centang (√) pada kolom Benar atau Salah untuk setiap pernyataan berikut!</p> <!-- PG Kompleks > 1 jawaban pilihan -->
 <table class="table " style="margin-top:0px">
-																								<tr><td style="width:20px;border:0px;padding:0px" >
+										<tr>
+											<td style="width:20px;border:0px;padding:0px" >
 													<div class="radio icheck-primary" onClick="KlikJawaban('2.','0');">
 													<input id="pilihan_2_0"  onChange="pilihan('2','a','2')" pil="a" name="pilihan2" type="radio" class="auto-save"  />
 													<label for="pilihan_2_0"></label>
 													</div>
 											<td style='padding-top:15px;;border:0px;padding:0px;padding-top:5px' onClick="KlikJawaban(2,0);"><?xml encoding="utf-8" ?><p>Bintang A lebih panas <strong>0,5</strong> kali daripada bintang B</p>
-</td></td></td></tr>															<tr><td style="width:20px;border:0px;padding:0px" >
+											</td>
+</td></tr>															<tr><td style="width:20px;border:0px;padding:0px" >
 													<div class="radio icheck-primary" onClick="KlikJawaban('2.','1');">
 													<input id="pilihan_2_1"  onChange="pilihan('2','b','2')" pil="b" name="pilihan2" type="radio" class="auto-save"  />
 													<label for="pilihan_2_1"></label>
