--- a/cbt/osnk/cbt_v2.html
+++ b/cbt/osnk/cbt_v2.html
@@ -3872,7 +3872,7 @@
          		}
          	}
 
-         /* View in fullscreen */
+         /* View in fullscreen 
          		function openFullscreen() {
          			var elem = document.documentElement;
          		  if (elem.requestFullscreen) {
@@ -3882,11 +3882,11 @@
          		  } else if (elem.msRequestFullscreen) {
          			elem.msRequestFullscreen();
          		  }
-         		}
+         		} */
          	
          	$(document).ready(function() {
          		//ccInit();
-         		openFullscreen();
+         		//openFullscreen();
          		
          		$('#loader').fadeOut();
                for(var i = 1; i <= 40; i++) {
